--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.appoptics.metrics</groupId>
     <artifactId>appoptics-api-java</artifactId>
     <name>AppOptics Metrics API Java Library</name>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <description>A set of libraries to facilitate posting data to the AppOptics Metrics Api</description>
     <url>https://github.com/appoptics/appoptics-api-java</url>
     <licenses>
@@ -23,7 +23,7 @@
         <url>https://github.com/appoptics/appoptics-api-java</url>
         <connection>scm:git:git@github.com:appoptics/appoptics-api-java.git</connection>
         <developerConnection>scm:git:git@github.com:appoptics/appoptics-api-java.git</developerConnection>
-      <tag>appoptics-api-java-1.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
     <build>
         <extensions>
