--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.appoptics.metrics</groupId>
     <artifactId>appoptics-api-java</artifactId>
     <name>AppOptics Metrics API Java Library</name>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <description>A set of libraries to facilitate posting data to the AppOptics Metrics Api</description>
     <url>https://github.com/appoptics/appoptics-api-java</url>
     <licenses>
