--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,6 @@
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
-                                <configuration>
-                                    <!-- don't attach sources here as the shade plugin will also attach sources -->
-                                    <attach>false</attach>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -109,17 +105,26 @@
         </extensions>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.0</version>
+                <version>3.5.1</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <phase>package</phase>
                         <configuration>
+                            <finalName>${project.artifactId}-${project.version}-nodeps</finalName>
                             <artifactSet>
                                 <includes>
                                     <include>com.squareup.**</include>
+                                    <include>com.fasterxml.**</include>
                                 </includes>
                             </artifactSet>
                             <relocations>
@@ -131,8 +136,11 @@
                                     <pattern>okio</pattern>
                                     <shadedPattern>com.appoptics.appopticsjava.shaded.okio</shadedPattern>
                                 </relocation>
+                                <relocation>
+                                    <pattern>com.fasterxml</pattern>
+                                    <shadedPattern>com.appoptics.appopticsjava.shaded.com.fasterxml</shadedPattern>
+                                </relocation>
                             </relocations>
-                            <createSourcesJar>true</createSourcesJar>
                         </configuration>
                     </execution>
                 </executions>
@@ -151,16 +159,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.11.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <debug>true</debug>
+                    <parameters>true</parameters>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
+                <version>3.2.2</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
@@ -169,7 +179,7 @@
     </build>
     <packaging>jar</packaging>
     <properties>
-        <jackson.version>2.9.8</jackson.version>
+        <jackson.version>2.16.0</jackson.version>
     </properties>
     <dependencies>
         <dependency>
@@ -188,25 +198,26 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-        <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>3.11.0</version>
+            <version>4.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>1.7.36</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.25</version>
+            <version>1.7.36</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
